# bst_words

./: Cargo.toml  data.txt  words.json
.VSCodeCounter/2023-12-16_17-46-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-12-17_23-42-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: bst.rs  lib.rs  main.rs  type.rs  utils.rs
