[package]
name = "bst_words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["history", "completion"] }
serde = { version = "1.0.193", features = ["alloc", "derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"

[profile.release]
opt-level = 3
